feat: frontend + backend contacto y agenda con correo

--- a/nutriAN/index.html
+++ b/nutriAN/index.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AnNutrition</title>
 
-    <!-- Web component de Lottie -->
-    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js" defer></script>
-
-    <!-- 👇 Necesario para que Vite cargue tu app -->
+    <!--Necesario para que Vite cargue tu app -->
     <script type="module" src="/src/main.tsx"></script>
   </head>
   <body>
